# vantacode-taxonomies

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.json  README.md
.github/: pull_request_template.md
clusters/: vantacode-ai-threat-actors.json  vantacode-ai-tools.json  vantacode-dkc-rules.json  vantacode-mbt-techniques.json  vantacode-ofa-tactics.json  vantacode-ofa-techniques.json  vantacode-research.json  vantacode-vantagrid-findings.json
examples/github-scanner/: README.md  pyproject.toml
examples/github-scanner/vantacode_github_scanner/: __init__.py  cli.py  gh.py  output.py  scanner.py
examples/scanner/: README.md  pyproject.toml
examples/scanner/vantacode_scanner/: __init__.py  cli.py  output.py  rules.py  scanner.py  sources.py
galaxies/: vantacode-ai-threat-actors.json  vantacode-ai-tools.json  vantacode-dkc-rules.json  vantacode-mbt-techniques.json  vantacode-ofa-tactics.json  vantacode-ofa-techniques.json  vantacode-research.json  vantacode-vantagrid-findings.json
mappings/: cisa-sectors.json  mitre-atlas.json  mitre-attack.json  owasp-llm-top10.json  vantacode-ofa-to-mitre-attack.json
research/: README.md
scanner-rules/: README.md  dkc.yaml  domain.yaml  governance.yaml  mbt.yaml  ofa.yaml  schema.json  sensitivity.yaml  status.yaml
schema/: cluster.schema.json  galaxy.schema.json  mapping.schema.json  taxonomy.schema.json
tools/: generate_docs.py  generate_tags.py  machinetag.py  validate.py
vantacode-domain/: README.md  machinetag.json
vantacode-governance/: README.md  machinetag.json
vantacode-mbt/: README.md  (+1 more)
(+27 files in other folders)
